--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -12,29 +12,14 @@
     </div>
     <br>
 <p>Soma Básica: Calcule a soma de 10 e 20.</p>
-<script>
-var resultado = 10 + 20;
-console.log(resultado)
-</script> 
 <br>
 <p>Subtração Básica: Calcule a diferença entre 30 e 10.</p>
-<script>
-var diferenca = 30 - 10;
-console.log(diferenca)
-</script> 
 <br>  
 <p>Dobrar Valor: Usando multiplicação, dobre o valor 15.</p>
-<script>
-var valor = 15;
-var resultado = valor * 2;
-console.log(resultado);
-</script>
 <br>
 <p>Divisão Básica: Divida 100 por 5.</p>
-<script>
-var resultado = 100 / 5;
-console.log(resultado);
-</script>
+
+<script src="scripts.js"></script>
 
 </body>
 </html>
