--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -19,7 +19,7 @@
 <br>
 <p>Divisão Básica: Divida 100 por 5.</p>
 
-<script src="scripts.js"></script>
+<script src="index.js"></script>
 
 </body>
 </html>
